fixed spacing issues with gap

--- a/src/components/structural/buttonArea/ButtonArea.module.scss
+++ b/src/components/structural/buttonArea/ButtonArea.module.scss
@@ -4,25 +4,17 @@
 .button_container {
   display: flex;
   flex: 1;
-  column-gap: 10px;
-  grid-column-gap: 10px;
   justify-content: center;
 
   @include breakpoint(medium) {
-    column-gap: 25%;
-    grid-column-gap: 25%;
     align-items: center;
   }
 
   @include breakpoint(large) {
-    column-gap: 25%;
-    grid-column-gap: 25%;
     align-items: center;
   }
 
   @include breakpoint(wide) {
-    column-gap: 25%;
-    grid-column-gap: 25%;
     align-items: center;
   }
 
@@ -30,12 +22,17 @@
     min-height: 100px;
     max-height: 100px;
     flex: 1;
+    margin: 0;
     font-size: $font_size_small;
     background-color: $color_background_main;
     border: 0;
     border-radius: $border_radius_button;
     outline: none;
     box-shadow: $box_shadow_main;
+
+    &:last-of-type {
+      margin: 0 0 0 5%;
+    }
 
     @include breakpoint(medium) {
       min-height: 50px;
@@ -55,6 +52,10 @@
       &:hover {
         transform: scale(1.1);
       }
+
+      &:last-of-type {
+        margin: 0 0 0 25%;
+      }
     }
   
     @include breakpoint(wide) {
@@ -64,6 +65,10 @@
 
       &:hover {
         transform: scale(1.1);
+      }
+
+      &:last-of-type {
+        margin: 0 0 0 25%;
       }
     }
 
