--- a/src/components/structural/home/Home.module.scss
+++ b/src/components/structural/home/Home.module.scss
@@ -4,6 +4,4 @@
   max-width: 90vw;
   height: 100vh;
   flex-direction: column;
-  row-gap: 25px;
-  grid-row-gap: 25px;
 }
