--- a/src/components/structural/markdownEditor/MarkdownEditor.module.scss
+++ b/src/components/structural/markdownEditor/MarkdownEditor.module.scss
@@ -3,26 +3,22 @@
 
 .markdown_editor_button_area {
     display: flex;
-    flex: 1;
-    margin: 10px 0;
-}
-
-.markdown_editor_preview_area {
-    display: flex;
-    min-height: 33.33vh;
-    max-height: 33.33vh;
-    flex: 1;
-    flex-direction: column;
-    margin: 10px 0;
-    overflow-y: scroll;
-    background-color: $color_background_main;
-    border-radius: $border_radius_main;
-    box-shadow: $box_shadow_main;
+    margin: 1.5625rem 0;
 }
 
 .markdown_editor_text_area {
     display: flex;
     flex: 1;
-    margin: 10px 0;
     border-radius: $border_radius_main;
+}
+
+.markdown_editor_preview_area {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    margin: 1.5625rem 0;
+    overflow-y: scroll;
+    background-color: $color_background_main;
+    border-radius: $border_radius_main;
+    box-shadow: $box_shadow_main;
 }
