--- a/src/components/structural/textArea/TextArea.module.scss
+++ b/src/components/structural/textArea/TextArea.module.scss
@@ -10,24 +10,11 @@
   .textarea {
     margin: 0 0 1.5625rem;
     text-align: center;
-
-    @include breakpoint(medium) {
-      margin: 3.125rem 0 1.5625rem;
-    }
-
-    @include breakpoint(large) {
-      margin: 3.125rem 0 1.5625rem;
-    }
-
-    @include breakpoint(wide) {
-      margin: 3.125rem 0 1.5625rem;
-    }
   }
 
   .editor {
     display: flex;
-    min-height: 33.33vh;
-    max-height: 33.33vh;
+    min-height: 15vh;
     flex: 1;
     font-size: $font_size_small;
     text-align: center;
